<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_step2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="thuyhien.layoutanduicontrol.SignUpStep2Activity">

    <TextView
        android:id="@+id/txtSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_salary" />

    <include layout="@layout/seekbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:text="@string/sport_like" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:stretchColumns="*">

        <TableRow>

            <CheckBox
                android:id="@+id/ckbFootball"
                android:text="@string/football" />

            <CheckBox
                android:id="@+id/ckbTennis"
                android:text="@string/tennis" />

            <CheckBox
                android:id="@+id/ckbPingPong"
                android:text="@string/ping_pong" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/margin_15">

            <CheckBox
                android:id="@+id/ckbSwimming"
                android:text="@string/swimming" />

            <CheckBox
                android:id="@+id/ckbVolleyball"
                android:text="@string/volleyball" />

            <CheckBox
                android:id="@+id/ckbBasketball"
                android:text="@string/basketball" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@color/nextBtnColor"
        android:text="@string/done"
        android:textColor="@color/textNextBtnColor" />
</LinearLayout>
